--- a/zwar/index.html
+++ b/zwar/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+<head>
+<html lang="ar" hreflang="ar-sa">
+<meta content="text/html charset=utf-8" http-equiv="Content-Type">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+<meta property="og:title" content=" شات درر العرب،شات درر العرب،شات غالي وغالي،شات عراق ميوزك،شات بنات العراق،دردشه بنات العراق،شات عراقي،شات عراق الرومانسيه،شات احله بنات،شات ميوزك،دردشه عراقيه رومانسيه،شات للجوال،شات كتابي،شات بنوتات،شات فراشه،دردشه عراق ميوزك للجوال،شات غالي وغالي،دردشه غالي وغالي،شات كتابي،دردشه عراقيه ، دردشة عراقية شات درر العرب ، دردشة درر العرب  ، شات بنوتة بغداد ، دردشة بنوتة بغداد ، شات عراقي جات عراقي ، دردشة عراقنا ، دردشه بنوته بغداد ، جات بنوتة بغداد للجوال ، شات درر العراق ، دردشة درر العراق ، شات درر العراق للجوال ، دردشة درر العراق للجوال ، شات سهرات العرب ، دردشة سهرات العرب ، شات سهرات العراق ، دردشة سهرات العراق ">
+<meta property="og:description" content="شات درر العرب ، دردشة درر العرب ، شات درر ، دردشة درر ، شات درر العراق ، دردشة درر العراق ، شات لوز وسكر ، دردشة لوز وسكر ، شات لوز للجوال ، دردشة لوز للجوال ، شات سكر ، دردشة سكر ، شات سكر للجوال ، دردشة لوز للجوال ، شات لودو العراق ، دردشة لودو ، شات لودو ، دردشة عراقية شات درر العرب دردشة درر العرب شات بنوتة بغداد دردشة بنوتة بغداد  شات عراقي جات عراقي دردشة عراقنا دردشه بنوته بغداد جات بنوتة بغداد للجوال ، شات درر العرب،شات در العرب،شات غالي وغالي،شات عراق ميوزك،شات بنات العراق،دردشه بنات العراق،شات عراقي،شات عراق الرومانسيه،شات احله بنات،شات ميوزك،دردشه عراقيه رمانسيه،شات للجوال،شات كتابي،شات بنوتات،شات فراشه،دردشه عراق ميوزك للجوال،شات غالي وغالي،دردشه غالي وغالي،شات كتابي،دردشه عراقيه ، شات لحن للجوال ، دردشة لحن للجوال ، شات درر العراق ، دردشة درر العراق ، شات درر العراق للجوال ، دردشة درر العراق للجوال ، شات سهرات العرب ، دردشة سهرات العرب ، شات سهرات العراق ، دردشة سهرات العراق ">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<meta name="google" value="notranslate">
+<meta name="HandheldFriendly" content="True">
+<meta name="viewport" content=" user-scalable=0, width=device-width">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
+<title>شات درر العرب،شات درر العرب،شات غالي وغالي،شات عراق ميوزك،شات بنات العراق،دردشه بنات العراق،شات عراقي،شات عراق الرومانسيه،شات احله بنات،شات ميوزك،دردشه عراقيه رومانسيه،شات للجوال،شات كتابي،شات بنوتات،شات فراشه،دردشه عراق ميوزك للجوال،شات غالي وغالي،دردشه غالي وغالي،شات كتابي،دردشه عراقيه ، دردشة عراقية شات درر العرب ، دردشة درر العرب  ، شات بنوتة بغداد ، دردشة بنوتة بغداد ، شات عراقي جات عراقي ، دردشة عراقنا ، دردشه بنوته بغداد ، جات بنوتة بغداد للجوال ، شات درر العراق ، دردشة درر العراق ، شات درر العراق للجوال ، دردشة درر العراق للجوال ، شات سهرات العرب ، دردشة سهرات العرب ، شات سهرات العراق ، دردشة سهرات العراق</title>
+<meta name="description" content="شات درر العرب ، دردشة درر العرب ، شات درر ، دردشة درر ، شات درر العراق ، دردشة درر العراق ، شات لوز وسكر ، دردشة لوز وسكر ، شات لوز للجوال ، دردشة لوز للجوال ، شات سكر ، دردشة سكر ، شات سكر للجوال ، دردشة لوز للجوال ، شات لودو العراق ، دردشة لودو ، شات لودو ، دردشة عراقية شات درر العرب دردشة درر العرب شات بنوتة بغداد دردشة بنوتة بغداد  شات عراقي جات عراقي دردشة عراقنا دردشه بنوته بغداد جات بنوتة بغداد للجوال ، شات درر العرب،شات در العرب،شات غالي وغالي،شات عراق ميوزك،شات بنات العراق،دردشه بنات العراق،شات عراقي،شات عراق الرومانسيه،شات احله بنات،شات ميوزك،دردشه عراقيه رمانسيه،شات للجوال،شات كتابي،شات بنوتات،شات فراشه،دردشه عراق ميوزك للجوال،شات غالي وغالي،دردشه غالي وغالي،شات كتابي،دردشه عراقيه ، شات لحن للجوال ، دردشة لحن للجوال ، شات درر العراق ، دردشة درر العراق ، شات درر العراق للجوال ، دردشة درر العراق للجوال ، شات سهرات العرب ، دردشة سهرات العرب ، شات سهرات العراق ، دردشة سهرات العراق ">
+<meta content="شات درر العرب،شات در العرب،شات غالي وغالي،شات عراق ميوزك،شات بنات العراق،دردشه بنات العراق،شات عراقي،شات عراق الرومانسيه،شات احله بنات،شات ميوزك،دردشه عراقيه رمانسيه،شات للجوال،شات كتابي،شات بنوتات،شات فراشه،دردشه عراق ميوزك للجوال،شات غالي وغالي،دردشه غالي وغالي،شات كتابي،دردشه عراقيه ، شات درر العرب للجوال ، دردشة درر للجوال ، دردشة درر العرب للجوال ، شات درر للجوال ، دردشة عراقية شات درر العرب دردشة درر العرب شات بنوتة بغداد دردشة بنوتة بغداد  شات عراقي جات عراقي دردشة عراقنا دردشه بنوته بغداد جات بنوتة بغداد للجوال ، شات درر العراق ، دردشة درر العراق ، شات درر العراق للجوال ، دردشة درر العراق للجوال ، شات سهرات العرب ، دردشة سهرات العرب ، شات سهرات العراق ، دردشة سهرات العراق" name="keywords">
+<meta name="google-site-verification" content="leC53WEpYBTq1XYg7cjwvjE__DlEHVde1Y60rMLeGZo" />
+<meta name="robots" content="index,nofollow">
+<link rel="icon" href="favicon.ico">
+<link rel="canonical" href="https://iraqia-chat.com" />
 		<title>زوار درر العرب | شات درر العرب - دردشة درر العرب</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		
+		<link rel="stylesheet" href="zwar/assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="zwar/assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -26,42 +44,42 @@
 
 								<article class="item thumb span-1">
 									<h2>رفل الوادي</h2>
-									<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a>
+									<a href="zwar/images/fulls/01.jpg" class="image"><img src="zwar/images/thumbs/01.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
 									<h2>ريو</h2>
-									<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a>
+									<a href="zwar/images/fulls/02.jpg" class="image"><img src="zwar/images/thumbs/02.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
 									<h2>نونايه</h2>
-									<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a>
+									<a href="zwar/images/fulls/03.jpg" class="image"><img src="zwar/images/thumbs/03.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
 									<h2>محمد الهاشمي</h2>
-									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+									<a href="zwar/images/fulls/04.jpg" class="image"><img src="zwar/images/thumbs/04.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-3">
 									<h2>نمر - شارد</h2>
-									<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a>
+									<a href="zwar/images/fulls/05.jpg" class="image"><img src="zwar/images/thumbs/05.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
 									<h2>سميح المستطرق</h2>
-									<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a>
+									<a href="zwar/images/fulls/06.jpg" class="image"><img src="zwar/images/thumbs/06.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
 									<h2>لمار</h2>
-									<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt=""></a>
+									<a href="zwar/images/fulls/07.jpg" class="image"><img src="zwar/images/thumbs/07.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
 									<h2>مروة الربيعي</h2>
-									<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt=""></a>
+									<a href="zwar/images/fulls/08.jpg" class="image"><img src="zwar/images/thumbs/08.jpg" alt=""></a>
 								</article>
 
 							</div>
@@ -69,11 +87,11 @@
 						<!-- Items -->
 							<div class="items">
 
-								<article class="item thumb span-3"><h2>كمرهن - ساره</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>سلوى الزهيري</h2><a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>وسن الدراجي</h2><a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>يونس الانباري</h2><a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>كوردية</h2><a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a></article>
+								<article class="item thumb span-3"><h2>كمرهن - ساره</h2><a href="zwar/images/fulls/05.jpg" class="image"><img src="zwar/images/thumbs/05.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>سلوى الزهيري</h2><a href="zwar/images/fulls/06.jpg" class="image"><img src="zwar/images/thumbs/06.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>وسن الدراجي</h2><a href="zwar/images/fulls/07.jpg" class="image"><img src="zwar/images/thumbs/07.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>يونس الانباري</h2><a href="zwar/images/fulls/08.jpg" class="image"><img src="zwar/images/thumbs/08.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>كوردية</h2><a href="zwar/images/fulls/01.jpg" class="image"><img src="zwar/images/thumbs/01.jpg" alt=""></a></article>
 								<article class="item thumb span-2"><h2>عبدالله البصراوي</h2><a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a></article>
 								<article class="item thumb span-1"><h2>اسكندر - علاوي</h2><a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a></article>
 								<article class="item thumb span-2"><h2>حلم</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
