--- a/zwar/index.html
+++ b/zwar/index.html
@@ -22,8 +22,8 @@
 <link rel="canonical" href="https://iraqia-chat.com" />
 		<title>زوار درر العرب | شات درر العرب - دردشة درر العرب</title>
 		
-		<link rel="stylesheet" href="zwar/assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="zwar/assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -44,42 +44,42 @@
 
 								<article class="item thumb span-1">
 									<h2>رفل الوادي</h2>
-									<a href="zwar/images/fulls/01.jpg" class="image"><img src="zwar/images/thumbs/01.jpg" alt=""></a>
+									<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
 									<h2>ريو</h2>
-									<a href="zwar/images/fulls/02.jpg" class="image"><img src="zwar/images/thumbs/02.jpg" alt=""></a>
+									<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
 									<h2>نونايه</h2>
-									<a href="zwar/images/fulls/03.jpg" class="image"><img src="zwar/images/thumbs/03.jpg" alt=""></a>
+									<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
 									<h2>محمد الهاشمي</h2>
-									<a href="zwar/images/fulls/04.jpg" class="image"><img src="zwar/images/thumbs/04.jpg" alt=""></a>
+									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-3">
 									<h2>نمر - شارد</h2>
-									<a href="zwar/images/fulls/05.jpg" class="image"><img src="zwar/images/thumbs/05.jpg" alt=""></a>
+									<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
 									<h2>سميح المستطرق</h2>
-									<a href="zwar/images/fulls/06.jpg" class="image"><img src="zwar/images/thumbs/06.jpg" alt=""></a>
+									<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
 									<h2>لمار</h2>
-									<a href="zwar/images/fulls/07.jpg" class="image"><img src="zwar/images/thumbs/07.jpg" alt=""></a>
+									<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
 									<h2>مروة الربيعي</h2>
-									<a href="zwar/images/fulls/08.jpg" class="image"><img src="zwar/images/thumbs/08.jpg" alt=""></a>
+									<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt=""></a>
 								</article>
 
 							</div>
@@ -87,11 +87,11 @@
 						<!-- Items -->
 							<div class="items">
 
-								<article class="item thumb span-3"><h2>كمرهن - ساره</h2><a href="zwar/images/fulls/05.jpg" class="image"><img src="zwar/images/thumbs/05.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>سلوى الزهيري</h2><a href="zwar/images/fulls/06.jpg" class="image"><img src="zwar/images/thumbs/06.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>وسن الدراجي</h2><a href="zwar/images/fulls/07.jpg" class="image"><img src="zwar/images/thumbs/07.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>يونس الانباري</h2><a href="zwar/images/fulls/08.jpg" class="image"><img src="zwar/images/thumbs/08.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>كوردية</h2><a href="zwar/images/fulls/01.jpg" class="image"><img src="zwar/images/thumbs/01.jpg" alt=""></a></article>
+								<article class="item thumb span-3"><h2>كمرهن - ساره</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>سلوى الزهيري</h2><a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>وسن الدراجي</h2><a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>يونس الانباري</h2><a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>كوردية</h2><a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a></article>
 								<article class="item thumb span-2"><h2>عبدالله البصراوي</h2><a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a></article>
 								<article class="item thumb span-1"><h2>اسكندر - علاوي</h2><a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a></article>
 								<article class="item thumb span-2"><h2>حلم</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
