--- a/zwar/index.html
+++ b/zwar/index.html
@@ -62,39 +62,98 @@
 								</article>
 
 								<article class="item thumb span-3">
-									<h2>نمر - شارد</h2>
+									<h2>تورنيدو</h2>
 									<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
-									<h2>سميح المستطرق</h2>
+									<h2>منير الجميلي</h2>
 									<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
-									<h2>لمار</h2>
+									<h2>سلوى الزهيري</h2>
 									<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
-									<h2>مروة الربيعي</h2>
+									<h2>يونس الانباري</h2>
 									<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt=""></a>
 								</article>
-
+								<article class="item thumb span-2">
+									<h2>كوردية</h2>
+									<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt=""></a>
+								</article>
+								<article class="item thumb span-2">
+									<h2>عيونها قصة</h2>
+									<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt=""></a>
+								</article>
+								<article class="item thumb span-2">
+									<h2>ايات</h2>
+									<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt=""></a>
+								</article>
+								<article class="item thumb span-2">
+									<h2>بهجت</h2>
+									<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt=""></a>
+								</article>
+								<article class="item thumb span-2">
+									<h2>حلم</h2>
+									<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/13.jpg" alt=""></a>
+								</article>
+								<article class="item thumb span-2">
+									<h2>عبدالله البصراوي</h2>
+									<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt=""></a>
+								</article>
+								<article class="item thumb span-2">
+									<h2>فاطمة</h2>
+									<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt=""></a>
+								</article>
+								<article class="item thumb span-2">
+									<h2>كمرهن - ساره</h2>
+									<a href="images/fulls/16.jpg" class="image"><img src="images/thumbs/16.jpg" alt=""></a>
+								</article>
+								<article class="item thumb span-2">
+									<h2>مروة الربيعي</h2>
+									<a href="images/fulls/17.jpg" class="image"><img src="images/thumbs/17.jpg" alt=""></a>
+								</article>
+								<article class="item thumb span-2">
+									<h2>مازن</h2>
+									<a href="images/fulls/18.jpg" class="image"><img src="images/thumbs/18.jpg" alt=""></a>
+								</article>
+								<article class="item thumb span-2">
+									<h2>همس</h2>
+									<a href="images/fulls/19.jpg" class="image"><img src="images/thumbs/19.jpg" alt=""></a>
+								</article>
+								<article class="item thumb span-2">
+									<h2>اسكندر</h2>
+									<a href="images/fulls/20.jpg" class="image"><img src="images/thumbs/20.jpg" alt=""></a>
+								</article>
 							</div>
 
 						<!-- Items -->
 							<div class="items">
 
-								<article class="item thumb span-3"><h2>كمرهن - ساره</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>سلوى الزهيري</h2><a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>وسن الدراجي</h2><a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt=""></a></article>
+								<article class="item thumb span-3"><h2>تورنيدو</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>منير الجميلي</h2><a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>سلوى الزهيري</h2><a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt=""></a></article>
 								<article class="item thumb span-2"><h2>يونس الانباري</h2><a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>كوردية</h2><a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>عبدالله البصراوي</h2><a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>اسكندر - علاوي</h2><a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>حلم</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>عيونها قصة</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>رفل الوادي</h2><a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>ريو</h2><a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>نونايه</h2><a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>تورنيدو</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>محمد الهاشمي</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>كوردية</h2><a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>عيونها قصة</h2><a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>ايات</h2><a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>بهجت</h2><a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>حلم</h2><a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/13.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>عبدالله البصراوي</h2><a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>فاطمة</h2><a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>كمرهن ساره</h2><a href="images/fulls/16.jpg" class="image"><img src="images/thumbs/16.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>مروة الربيعي</h2><a href="images/fulls/17.jpg" class="image"><img src="images/thumbs/17.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>مازن</h2><a href="images/fulls/18.jpg" class="image"><img src="images/thumbs/18.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>همس</h2><a href="images/fulls/19.jpg" class="image"><img src="images/thumbs/19.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>اسكندر</h2><a href="images/fulls/20.jpg" class="image"><img src="images/thumbs/20.jpg" alt=""></a></article>
 
 							</div>
 
