--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <meta property="og:description" content="شات العراق , شات العراق للجوال ,دردشة عراقية للجوال شات عراقي جات العراق شات عراقنا , شات البصرة , شات بغداد , دردشة عراقنا , شات صبايا , شات عراق , شات بغداد , شات  عسل تايم , دردشة عسل , شات عسل الخليج , شات عسل , شات عسل للجوال , دردشة عسل للجوال , دردشة عسل تايم , شات العراق , شات العراق للجوال , دردشة العراق , شات جات عراق , شات صبايا , شات درر , شات دردشة العراق للجوال بنوتة العراقية رومانسية دردشة بنوتة قلبي دردشة عراقنا اكبر شات شباب وبنات العراق - Chat Iraqi - شات درر ، دردشة درر ، شات درر العرب ، دردشة درر العرب ، شات درر العرب للجوال ، دردشة درر العرب للجوال">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <meta name="google-site-verification" content="leC53WEpYBTq1XYg7cjwvjE__DlEHVde1Y60rMLeGZo" />
+<meta name='dmca-site-verification' content='OGdGay9OMjZDQUQrVVEvMmpHT3FJU1ozQTgyZXFkeHZSbXpOZGJuRzFMRT01' />
 <meta name="robots" content="index,nofollow">
 <link rel="canonical" href="https://iraqia-chat.com" />
 <meta name="google" value="notranslate">
