--- a/google/index.html
+++ b/google/index.html
@@ -22,12 +22,12 @@
   </head>
   <body>
 <div align="center">
-<div class="codrops-top"><marquee direction="right" scrolldelay="150"> اهلاً وسهلاً بكم في دردشتكم محرك بحث محرك كوكل نتمنى لكم اطيب الأوقات</marquee></div> 
+<div class="codrops-top"><marquee direction="right" scrolldelay="150"> اهلاً وسهلاً بكم في كوكل محرك بحث محرك كوكل نتمنى لكم اطيب الأوقات</marquee></div> 
 <br>
 <form>
 <input type="button" class="button" onclick="window.open('https://chat-iraq.com/');" value="للدخول اضغط هنا" />
 <input type="button" class="button" onclick="window.open('https://iraq0.com/');" value="شات بنوتات" />
-<input type="button" class="button" onclick="window.open('https://chat-iraq.com/');" value="عناكب" />
+<input type="button" class="button" onclick="window.open('https://chat-iraq.com/');" value="شات العراق" />
 <input type="button" class="button" onclick="window.open('https://iraqia-chat.com/');" value="درر العرب" />
 <br />
 <select name="go_to" class="button">
