--- a/ksa-3/index.html
+++ b/ksa-3/index.html
@@ -17,9 +17,9 @@
 <meta name="description" content="شات الجوال.شات السعوديه.شات كتابي للجوال,شات تعب قلبي,شات جوال.دردشه كتابيه,شات للجوال,شات قلوب,شات للجوال,شات فله,شات الخليج,شات فله الخليج,شات عشق,شات فون,شات الشله,شات تعارف,شات تعارف ">
 <meta content="شات الجوال.شات السعوديه.شات كتابي للجوال,شات تعب قلبي,شات جوال.دردشه كتابيه,شات للجوال,شات قلوب,شات للجوال,شات فله,شات الخليج,شات فله الخليج,شات عشق,شات فون,شات الشله,شات تعارف,شات تعارف " name="keywords">
 <script type="c7a7282be37081aa23d93153-text/javascript">window.port=1055;window.scrollTo(0,1);</script>
-<meta name="google-site-verification" content="hBD3UlMYYATYzm-lQD0JSWhePquE2-KtAivkfW6RdD4" />
+<meta name="google-site-verification" content="leC53WEpYBTq1XYg7cjwvjE__DlEHVde1Y60rMLeGZo" />
 <meta name="robots" content="index,nofollow">
-<link rel="canonical" href="https://chat-iraq.com/" />
+<link rel="canonical" href="https://iraqia-chat.com" />
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <link rel="stylesheet" href="https://chat-iraq.com/bootstrap.min.css">
 <link rel="stylesheet" href="https://chat-iraq.com/style.css">
