--- a/hams0/index.html
+++ b/hams0/index.html
@@ -18,9 +18,9 @@
 <meta content="شات  همس | دردشة همس | شات همس للجوال | دردشة كتابي | شات الجوال | شات عربي | شات خليجي | شات همس | دردشة همس للجوال | شات خليج| شات بنات | شات العرب | شات همس | شات همس | شات همس كتابي للجوال 
 | شات عبره للجوال | شات وهج للجوال | شات وجد للجوال | شات حرف للجوال | شات حلاك للجوال | شات لقى للجوال  |" name="keywords">
 <script type="c7a7282be37081aa23d93153-text/javascript">window.port=1055;window.scrollTo(0,1);</script>
-<meta name="google-site-verification" content="hBD3UlMYYATYzm-lQD0JSWhePquE2-KtAivkfW6RdD4" />
+<meta name="google-site-verification" content="leC53WEpYBTq1XYg7cjwvjE__DlEHVde1Y60rMLeGZo" />
 <meta name="robots" content="index,nofollow">
-<link rel="canonical" href="https://chat-iraq.com/" />
+<link rel="canonical" href="https://iraqia-chat.com" />
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <link rel="stylesheet" href="https://chat-iraq.com/bootstrap.min.css">
 <link rel="stylesheet" href="https://chat-iraq.com/style.css">
