--- a/Forum/index.html
+++ b/Forum/index.html
@@ -67,7 +67,7 @@
 							<div class="media">
 								<div class="media-left">
 									<p class="image is-32x32">
-										<img src="kaz.png">
+										<img src="kaz.png"alt="كاز الوادي">
 									</p>
 								</div>
 								<div class="media-content">
@@ -88,7 +88,7 @@
 							<div class="media">
 								<div class="media-left">
 									<p class="image is-32x32">
-										<img src="rafal.png">
+										<img src="rafal.png"alt="رفل الوادي">
 									</p>
 								</div>
 								<div class="media-content">
@@ -109,7 +109,7 @@
 							<div class="media">
 								<div class="media-left">
 									<p class="image is-32x32">
-										<img src="http://bulma.io/images/placeholders/128x128.png">
+										<img src="http://bulma.io/images/placeholders/128x128.png"alt="تورنيدو">
 									</p>
 								</div>
 								<div class="media-content">
@@ -130,7 +130,7 @@
 							<div class="media">
 								<div class="media-left">
 									<p class="image is-32x32">
-										<img src="http://bulma.io/images/placeholders/128x128.png">
+										<img src="http://bulma.io/images/placeholders/128x128.png"alt="الوادي لخدمات السيو">
 									</p>
 								</div>
 								<div class="media-content">
@@ -151,7 +151,7 @@
 							<div class="media">
 								<div class="media-left">
 									<p class="image is-32x32">
-										<img src="http://bulma.io/images/placeholders/128x128.png">
+										<img src="http://bulma.io/images/placeholders/128x128.png"alt="منير الجميلي">
 									</p>
 								</div>
 								<div class="media-content">
@@ -172,7 +172,7 @@
 							<div class="media">
 								<div class="media-left">
 									<p class="image is-32x32">
-										<img src="sara.png">
+										<img src="sara.png"alt="سارة كمرهن">
 									</p>
 								</div>
 								<div class="media-content">
@@ -205,7 +205,7 @@
 							</div>
 							<div class="control">
 								<div class="tags has-addons">
-									<a class="tag is-link">KAZ</a>
+									<a rel="dofollow" href="#">KAZ</a>
 									<span class="tag is-light">ALwadi &nbsp;<i class="fa fa-github"></i></span>
 								</div>
 							</div>
@@ -214,6 +214,5 @@
 				</div>
 			</div>
 		</footer>
-		<script async type="text/javascript" src="../js/bulma.js"></script>
 	</body>
 </html>
