--- a/Forum/index.html
+++ b/Forum/index.html
@@ -5,13 +5,13 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta property="og:title" content="منتدى درر العرب اسئلة شائعة دردشة درر العرب">
+<meta property="og:title" content="منتدى الاسئلة الشائعة | شات درر العرب - دردشة درر العرب">
 <meta property="og:description" content="يحتوي منتدى الاسئلة الشائعة لشات درر العرب على الأجوبة  للدخول الى الشات و فك الحظر  والاكواد لرفع النك في دردشة درر العرب في نسخ شاتات الجوال دوك موبايل و جوال هوست و يوكام هوست">
 <title>منتدى الاسئلة الشائعة | شات درر العرب - دردشة درر العرب</title>
 <meta name="description" content="يحتوي منتدى الاسئلة الشائعة لشات درر العرب على الأجوبة  للدخول الى الشات و فك الحظر  والاكواد لرفع النك في دردشة درر العرب في نسخ شاتات الجوال دوك موبايل و جوال هوست و يوكام هوست">
 <meta content="يحتوي منتدى الاسئلة الشائعة لشات درر العرب على الأجوبة  للدخول الى الشات و فك الحظر  والاكواد لرفع النك في دردشة درر العرب في نسخ شاتات الجوال دوك موبايل و جوال هوست و يوكام هوست" name="keywords">
 <meta name="robots" content="index,nofollow">
-
+<link rel="canonical" href="https://iraqia-chat.com/Forum" />
 <link rel="icon" href="favicon.ico">
 <meta name="google" value="notranslate">
 <meta name="HandheldFriendly" content="True">
