--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <meta content="text/html charset=utf-8" http-equiv="Content-Type">
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<meta property="og:title" content="  شات بنات العراق | دردشة بنات العراق | شات عراقي | Chat Iraq |
-دردشة عراقية دردشة عراقنا شات صبايا العراق شات بنوتة جات عراقي شات عراقي ">
-<meta property="og:description" content="شات العراق , شات العراق للجوال ,دردشة عراقية للجوال شات عراقي جات العراق شات عراقنا , شات البصرة , شات بغداد , دردشة عراقنا , شات صبايا , شات عراق , شات بغداد , شات  عسل تايم , دردشة عسل , شات عسل الخليج , شات عسل , شات عسل للجوال , دردشة عسل للجوال , دردشة عسل تايم , شات العراق , شات العراق للجوال , دردشة العراق , شات جات عراق , شات صبايا , شات درر , شات دردشة العراق للجوال بنوتة العراقية رومانسية دردشة بنوتة قلبي دردشة عراقنا اكبر شات شباب وبنات العراق - Chat Iraqi - شات درر ، دردشة درر ، شات درر العرب ، دردشة درر العرب ، شات درر العرب للجوال ، دردشة درر العرب للجوال">
+<meta property="og:title" content="شات درر العرب دردشة درر العرب شات درر العراق دردشة درر العراق شات العراق">
+<meta property="og:description" content="شات درر العرب,دردشة درر العرب,شات درر العراق,دردشة درر العراق,شات العراق,درر العرب,شات عراقية,شات غالي,شات بنوتة بغداد,شات عراقي,دردشة عراقنا,شات درر,دردشة درر,شات سهرات,شات عراق الرومانسيه,سكر دردشه,شات لحن,شات لودو,شات لوز وسكر,شات لوز,شات سكر,شات بنوتات,شات سهرات العرب,شات فراشه العراق,شات ميوزك,شات صحار الكتابي,درر عرب,عرب جات,www.iraqiachat.com,صور درر,شات اوتار العرب,شات در,شات ميوزك هوست,iraqia chat,هناي العرب,شات جمر,شات فهاوه,صور شات,جات العرب,شات العراب,بنات شات,iraqiachat.com,دار العراق,محادثات عراقية,صور بنات شات,صور دردشه,dirarab,شات فراشات بغداد,العراق يرحب بكم,شات بنات عسل,دوك موبايل,شات اسياد العرب,شات صبايا سكر,شات موبايل هوست,شات صقور العرب,شات كتابي بنات">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <meta name="google-site-verification" content="leC53WEpYBTq1XYg7cjwvjE__DlEHVde1Y60rMLeGZo" />
 <meta name='dmca-site-verification' content='OGdGay9OMjZDQUQrVVEvMmpHT3FJU1ozQTgyZXFkeHZSbXpOZGJuRzFMRT01' />
@@ -18,15 +17,14 @@
 <meta name="viewport" content=" user-scalable=0, width=device-width">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
-<title> شات بنات العراق | دردشة بنات العراق | شات عراقي | Chat Iraq |
-دردشة عراقية دردشة عراقنا شات صبايا العراق شات بنوتة جات عراقي شات عراقي</title>
-<meta name="description" content="شات العراق , شات العراق للجوال ,دردشة عراقية للجوال شات عراقي جات العراق شات عراقنا , شات البصرة , شات بغداد , دردشة عراقنا , شات صبايا , شات عراق , شات بغداد , شات  عسل تايم , دردشة عسل , شات عسل الخليج , شات عسل , شات عسل للجوال , دردشة عسل للجوال , دردشة عسل تايم , شات العراق , شات العراق للجوال , دردشة العراق , شات جات عراق , شات صبايا , شات درر , شات دردشة العراق للجوال بنوتة العراقية رومانسية دردشة بنوتة قلبي دردشة عراقنا اكبر شات شباب وبنات العراق - Chat Iraqi - شات درر ، دردشة درر ، شات درر العرب ، دردشة درر العرب ، شات درر العرب للجوال ، دردشة درر العرب للجوال">
-<meta content="شات العراق, دردشة العراق,دردشة عراقية للجوال شات عراقي جات العراق دردشة شات , دردشة عسل , دردشة عسل للجوال , عسل تايم , دردشة عسل تايم , عراق , شات شكو للجوال , شات عراقنا , دردشة عراقنا , شات العراق , شات عراقنا , شات بنوتة , شات عسل للجوال , شات عسل تايم , شات العراق للجوال , شات بنوتة العراقية رومانسية دردشة بنوتة قلبي دردشة عراقنا اكبر شات شباب وبنات العراق - Chat Iraqi. - شات درر ، دردشة درر ، شات درر العرب ، دردشة درر العرب ، شات درر للجوال ، دردشة درر للجوال ، شات درر العرب للجوال ، دردشة درر العرب للجوال" name="keywords">
+<title>شات درر العرب دردشة درر العرب شات درر العراق دردشة درر العراق شات العراق</title>
+<meta name="description" content="شات درر العرب,دردشة درر العرب,شات درر العراق,دردشة درر العراق,شات العراق,درر العرب,شات عراقية,شات غالي,شات بنوتة بغداد,شات عراقي,دردشة عراقنا,شات درر,دردشة درر,شات سهرات,شات عراق الرومانسيه,سكر دردشه,شات لحن,شات لودو,شات لوز وسكر,شات لوز,شات سكر,شات بنوتات,شات سهرات العرب,شات فراشه العراق,شات ميوزك,شات صحار الكتابي,درر عرب,عرب جات,www.iraqiachat.com,صور درر,شات اوتار العرب,شات در,شات ميوزك هوست,iraqia chat,هناي العرب,شات جمر,شات فهاوه,صور شات,جات العرب,شات العراب,بنات شات,iraqiachat.com,دار العراق,محادثات عراقية,صور بنات شات,صور دردشه,dirarab,شات فراشات بغداد,العراق يرحب بكم,شات بنات عسل,دوك موبايل,شات اسياد العرب,شات صبايا سكر,شات موبايل هوست,شات صقور العرب,شات كتابي بنات">
+<meta content="شات درر العرب,دردشة درر العرب,شات درر العراق,دردشة درر العراق,شات العراق,درر العرب,شات عراقية,شات غالي,شات بنوتة بغداد,شات عراقي,دردشة عراقنا,شات درر,دردشة درر,شات سهرات,شات عراق الرومانسيه,سكر دردشه,شات لحن,شات لودو,شات لوز وسكر,شات لوز,شات سكر,شات بنوتات,شات سهرات العرب,شات فراشه العراق,شات ميوزك,شات صحار الكتابي,درر عرب,عرب جات,www.iraqiachat.com,صور درر,شات اوتار العرب,شات در,شات ميوزك هوست,iraqia chat,هناي العرب,شات جمر,شات فهاوه,صور شات,جات العرب,شات العراب,بنات شات,iraqiachat.com,دار العراق,محادثات عراقية,صور بنات شات,صور دردشه,dirarab,شات فراشات بغداد,العراق يرحب بكم,شات بنات عسل,دوك موبايل,شات اسياد العرب,شات صبايا سكر,شات موبايل هوست,شات صقور العرب,شات كتابي بنات" name="keywords">
 
   </head>
   <body>
 <div align="center">
-<div class="codrops-top"><marquee direction="right" scrolldelay="150"> اهلاً وسهلاً بكم في دردشتكم دردشة العراق شات العراق نتمنى لكم امتع الاوقات </marquee></div> 
+<div class="codrops-top"><marquee direction="right" scrolldelay="150">اهلا وسهلا بكم في شات درر العرب قريباً افتتاح موقع دردشة درر العرب</marquee></div> 
 <br>
 <form>
 <input type="button" class="button" onclick="window.open('https://iraq0.com/');" value="شات بنوتات" />
