--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   </head>
   <body>
 <div align="center">
+<meta http-equiv="refresh" content="10; URL=t.me/asltime"/>
+<p>سوف يتم تحويلك الى الدردشة خلال 10 ثواني<a href="t.me/asltime"></a></p>
 <div class="codrops-top"><marquee direction="right" scrolldelay="150">اهلا وسهلا بكم في شات درر العرب قريباً افتتاح موقع دردشة درر العرب</marquee></div> 
 <br>
 <form>
