--- a/iraq.html
+++ b/iraq.html
@@ -691,11 +691,11 @@ div#tlogins.light {
 <div class="hid">
 </div>
 <a onclick="location.href='/';" class="label label-primary   fl" style="width:100%;padding:6px;border-radius:0px;text-align: left;">
-<img src="prv1.png" class="fl" style="margin-right: 2px; width:28px;">شات تعب روحي للجوال<button class="btn fr btn-success fa fa-refresh" style="margin:0px;margin-top:-2px;"></button></a>
+<img src="prv1.png" class="fl" style="margin-right: 2px; width:28px;">شات درر العرب للجوال<button class="btn fr btn-success fa fa-refresh" style="margin:0px;margin-top:-2px;"></button></a>
 <ul class="nav  nav-tabs" style="margin-bottom:0px;background-color:white;">
 </ul>
 <h6 class="hid">
-شات تعب روحي الكتابي
+شات درر العرب الكتابي
 </h6>
 <a class="hid">
 </a><form name="jump">
@@ -713,11 +713,11 @@ div#tlogins.light {
 <div class="auto-style1 ">
 </div>
 <script>
-            $(`<img src="img/logoo.gif" class="fr" style="width:100%;margin-top: 0px;margin-bottom: 00px;" ><center>
+            $(`<img src="img/logoo.jpg" class="fr" style="width:100%;margin-top: 0px;margin-bottom: 00px;" ><center>
 <div id="wjj3">
 <a id="wjj3" href="sub.html"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">اشتراكات</a>
 <a id="wjj3" href="rules.html"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">القوانين</a>
-<a id="wjj3" href="https://wlhchat.com"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">شات جفى الخليج</a>
+<a id="wjj3" href="https://www.chat-iraq.com/broq/"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">شات جفى الخليج</a>
 <a id="wjj3" href="contact.html"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">اتصل بنا</a>`).insertBefore('.nav-tabs');
            
 			
@@ -775,7 +775,7 @@ h2 { text-align: center; background: #605b5b; color: #605b5b; font: 16px 'Segoe 
 <div class="room">
 </div>
 <div class="room">
-<a href="https://wjj3.net/">اضغط هنا لدخول الدردشه</a>
+<a href="https://www.iraqia-chat.com/">اضغط هنا لدخول الدردشه</a>
 </div>
 </div>
 </div>
@@ -800,7 +800,7 @@ h2 { text-align: center; background: #605b5b; color: #605b5b; font: 16px 'Segoe 
 <a href="qatar.html">شات بنات قطر</a>
 <a href="aden.html">شات بنات عدن</a>
 <a href="yemen.html">شات بنات اليمن</a>
-<a href="jibouti.html">شات بنات جيبوتي</a>
+<a href="wateen.html">شات وتين</a>
 </nav>
 <nav>
 <a href="egypt.html">شات بنات مصر</a>
@@ -810,7 +810,7 @@ h2 { text-align: center; background: #605b5b; color: #605b5b; font: 16px 'Segoe 
 <a href="iraq.html">شات بنات العراق</a>
 </nav>
 </div>
-<p class="copy"><span>&copy; <br>جميع الحقوق محفوظة لـ شات تعب روحي للجوال 2023 - 2024
+<p class="copy"><span>&copy; <br>جميع الحقوق محفوظة لـ شات درر العرب للجوال 2023 - 2024
 </span></p>
 </script>
 <img border="0" src="img/eraq.gif" width="403" height="229">
