--- a/rules.html
+++ b/rules.html
@@ -3,8 +3,8 @@
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta property="og:title" content="القوانين و سياسة الخصوصية - شات تعب روحي | شات الجوال شات جوال دردشة تعب روحي">
-  <meta property="og:description" content="شات تعب روحي,شات الجوال,شات جوال,شات وجع,شات صوتي,شات الغلا,شات قلوب,شات تعب قلبي,دردشة تعب روحي,شات سعودي,شات روحي,شات تعب الخليج,دردشة الخليج">
+  <meta property="og:title" content="القوانين و سياسة الخصوصية - شات درر العرب | شات الجوال شات جوال دردشة درر العرب">
+  <meta property="og:description" content="شات درر العرب,شات الجوال,شات جوال,شات وجع,شات صوتي,شات الغلا,شات قلوب,شات تعب قلبي,دردشة درر العرب,شات سعودي,شات روحي,شات تعب الخليج,دردشة الخليج">
   <meta property="og:image" content="prv1.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="google" value="notranslate">
@@ -12,9 +12,9 @@
   <meta name="viewport" content="user-scalable=0, width=400">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
-  <title>القوانين و سياسة الخصوصية - شات تعب روحي | شات الجوال شات جوال دردشة تعب روحي</title>
-  <meta name="description" content="شات تعب روحي,شات الجوال,شات جوال,شات وجع,شات صوتي,شات الغلا,شات قلوب,شات تعب قلبي,دردشة تعب روحي,شات سعودي,شات روحي,شات تعب الخليج,دردشة الخليج">
-  <meta content="شات تعب روحي,شات الجوال,شات جوال,شات وجع,شات صوتي,شات الغلا,شات قلوب,شات تعب قلبي,دردشة تعب روحي,شات سعودي,شات روحي,شات تعب الخليج,دردشة الخليج" name="keywords"> 
+  <title>القوانين و سياسة الخصوصية - شات درر العرب | شات الجوال شات جوال دردشة درر العرب</title>
+  <meta name="description" content="شات درر العرب,شات الجوال,شات جوال,شات وجع,شات صوتي,شات الغلا,شات قلوب,شات تعب قلبي,دردشة درر العرب,شات سعودي,شات روحي,شات تعب الخليج,دردشة الخليج">
+  <meta content="شات درر العرب,شات الجوال,شات جوال,شات وجع,شات صوتي,شات الغلا,شات قلوب,شات تعب قلبي,دردشة درر العرب,شات سعودي,شات روحي,شات تعب الخليج,دردشة الخليج" name="keywords"> 
 
 <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
 <style>
@@ -685,24 +685,24 @@ div#tlogins.light {
 <body class="bg" onload="" style="height: 100%; max-height: 100%; margin: 0px; padding: 0px; overflow: hidden; zoom: 1;">
 <div style="width:100%; height:100%;max-height:100%;max-width:380px;padding:0px;" class="center-block bg dad">
 <div id="tlogins" class="border corner light fr break" style="z-index: 1000; position: absolute; : -4px; height: 100%; top: 0px; width: 100%; max-width: 390px; ">
-<div class="hid">قوانين شات تعب روحي للجوال
+<div class="hid">قوانين شات درر العرب للجوال
 </div>
-<h1 class="hid">القوانين و سياسة الخصوصية - شات تعب روحي | شات الجوال شات جوال دردشة تعب روحي</h1>
+<h1 class="hid">القوانين و سياسة الخصوصية - شات درر العرب | شات الجوال شات جوال دردشة درر العرب</h1>
 <a onclick="location.href='/';" class="label label-primary   fl" style="width:100%;padding:6px;border-radius:0px;text-align: left;">
 <img src="prv1.png?2" class="fl" style="margin-right: 2px; width:28px;">قوانين
-شات تعب روحي للجوال <button class="btn fr btn-success fa fa-refresh" style="margin:0px;margin-top:-2px;"></button></a>
+شات درر العرب للجوال <button class="btn fr btn-success fa fa-refresh" style="margin:0px;margin-top:-2px;"></button></a>
 <ul class="nav  nav-tabs" style="margin-bottom:0px;background-color:white;">
 </ul>
 <h6 class="hid">
-شات تعب روحي الكتابي
+شات درر العرب الكتابي
 </h6>
-<a class="hid">قوانين شات الجوال الكتابي والصوتي وسياسة الخصوصية لدى شات تعب روحي ودردشة تعب روحي للجوال</a><form name="jump">
+<a class="hid">قوانين شات الجوال الكتابي والصوتي وسياسة الخصوصية لدى شات درر العرب ودردشة درر العرب للجوال</a><form name="jump">
 <table border="1" width="100%">
 <p align="center">
 <select name="menu" style="color: #6e6e6e;">
-<option value="https://wjj3.net/">دخول شات تعب روحي للجوال</option>
+<option value="https://www.iraqia-chat.com/">دخول شات درر العرب للجوال</option>
 <option value="rules.html">قوانين الشات</option>
-<option value="https://wlhchat.com/">جفى الخليج</option>
+<option value="https://www.chat-iraq.com/broq/">بروق</option>
 <option value="contact.html">اتصل بنا</option>
 <option value="Shortcut.html">اختصارات الشات</option>
 <option value="sub.html">اشتراكات السوابر</option>
@@ -717,8 +717,8 @@ div#tlogins.light {
 <tr>
 <td bgcolor="#FFFFFF">
 <h2 class="auto-style3"><u>
-<font face="شات تعب روحي للجوال" size="1">
-قوانين شات دردشة تعب روحي للجوال</font></u><font color="#404040"><br>
+<font face="شات درر العرب للجوال" size="1">
+قوانين شات دردشة درر العرب للجوال</font></u><font color="#404040"><br>
 <br></font>
 <font face="FS_Africa" size="3" color="#404040">
 <span style="font-weight: 400"><br></span>يمنع
@@ -764,7 +764,7 @@ div#tlogins.light {
 <tbody></tbody>
 <div class="abo ">
 <a href="rules.html">
-<br> شروط وقوانين الأشتراك في شات تعب روحي للجوال أضغط هنا </a></b></span></td>
+<br> شروط وقوانين الأشتراك في شات درر العرب للجوال أضغط هنا </a></b></span></td>
 <p>
 <tbody>
 <tr>
@@ -773,16 +773,16 @@ div#tlogins.light {
 </div>
 <div class="abo ">
 &nbsp;</div>
-<img border="0" src="img/logo.gif" width="403" height="229"><a href="https://wjj3.net/"><span>
+<img border="0" src="img/logo.png" width="403" height="229"><a href="https://www.iraqia-chat.com/"><span>
 </span>
 <div class="auto-style1 ">
-<br>جميع الحقوق محفوظة لـ شات تعب روحي للجوال 2023 - 2024</div>
+<br>جميع الحقوق محفوظة لـ شات درر العرب للجوال 2023 - 2024</div>
 <script>
-            $(`<img src="img/logoo.gif" class="fr" style="width:100%;margin-top: 0px;margin-bottom: 00px;" ><center>
+            $(`<img src="img/logoo.jpg" class="fr" style="width:100%;margin-top: 0px;margin-bottom: 00px;" ><center>
 <div id="wjj3">
 <a id="wjj3" href="sub.html"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">اشتراكات</a>
 <a id="wjj3" href="sub.html"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">القوانين</a>
-<a id="wjj3" href="https://wlhchat.com"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">شات جفى الخليج</a>
+<a id="wjj3" href="https://www.chat-iraq.com/broq/"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">شات بروق</a>
 <a id="wjj3" href="contact.html"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">اتصل بنا</a>`).insertBefore('.nav-tabs');
            
 			
