--- a/Shortcut.html
+++ b/Shortcut.html
@@ -3,8 +3,8 @@
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta property="og:title" content="اختصارات الشات الكتابي - شات تعب روحي | شات الجوال شات جوال دردشة تعب روحي">
-  <meta property="og:description" content="شات تعب روحي,شات الجوال,شات جوال,شات وجع,شات صوتي,شات الغلا,شات قلوب,شات تعب قلبي,دردشة تعب روحي,شات سعودي,شات روحي,شات تعب الخليج,دردشة الخليج">
+  <meta property="og:title" content="اختصارات الشات الكتابي - شات درر العرب | شات الجوال شات جوال دردشة درر العرب">
+  <meta property="og:description" content="شات درر العرب,شات الجوال,شات جوال,شات وجع,شات صوتي,شات الغلا,شات قلوب,شات تعب قلبي,دردشة درر العرب,شات سعودي,شات روحي,شات تعب الخليج,دردشة الخليج">
   <meta property="og:image" content="prv1.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="google" value="notranslate">
@@ -12,9 +12,9 @@
   <meta name="viewport" content="user-scalable=0, width=400">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
-  <title>اختصارات الشات الكتابي - شات تعب روحي | شات الجوال شات جوال دردشة تعب روحي</title>
-  <meta name="description" content="شات تعب روحي,شات الجوال,شات جوال,شات وجع,شات صوتي,شات الغلا,شات قلوب,شات تعب قلبي,دردشة تعب روحي,شات سعودي,شات روحي,شات تعب الخليج,دردشة الخليج">
-  <meta content="شات تعب روحي,شات الجوال,شات جوال,شات وجع,شات صوتي,شات الغلا,شات قلوب,شات تعب قلبي,دردشة تعب روحي,شات سعودي,شات روحي,شات تعب الخليج,دردشة الخليج" name="keywords"> 
+  <title>اختصارات الشات الكتابي - شات درر العرب | شات الجوال شات جوال دردشة درر العرب</title>
+  <meta name="description" content="شات درر العرب,شات الجوال,شات جوال,شات وجع,شات صوتي,شات الغلا,شات قلوب,شات تعب قلبي,دردشة درر العرب,شات سعودي,شات روحي,شات تعب الخليج,دردشة الخليج">
+  <meta content="شات درر العرب,شات الجوال,شات جوال,شات وجع,شات صوتي,شات الغلا,شات قلوب,شات تعب قلبي,دردشة درر العرب,شات سعودي,شات روحي,شات تعب الخليج,دردشة الخليج" name="keywords"> 
 
 <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
 <style>
@@ -685,23 +685,23 @@ div#tlogins.light {
 <body class="bg" onload="" style="height: 100%; max-height: 100%; margin: 0px; padding: 0px; overflow: hidden; zoom: 1;">
 <div style="width:100%; height:100%;max-height:100%;max-width:380px;padding:0px;" class="center-block bg dad">
 <div id="tlogins" class="border corner light fr break" style="z-index: 1000; position: absolute; : -4px; height: 100%; top: 0px; width: 100%; max-width: 390px; ">
-<div class="hid">اختصارات شات تعب روحي للجوال
+<div class="hid">اختصارات شات درر العرب للجوال
 </div>
-<h1 class="hid">اختصارات الشات الكتابي - شات تعب روحي | شات الجوال شات جوال دردشة تعب روحي</h1>
+<h1 class="hid">اختصارات الشات الكتابي - شات درر العرب | شات الجوال شات جوال دردشة درر العرب</h1>
 <a onclick="location.href='/';" class="label label-primary   fl" style="width:100%;padding:6px;border-radius:0px;text-align: left;">
-<img src="prv1.png?2" class="fl" style="margin-right: 2px; width:28px;">اختصارات شات تعب روحي للجوال <button class="btn fr btn-success fa fa-refresh" style="margin:0px;margin-top:-2px;"></button></a>
+<img src="prv1.png?2" class="fl" style="margin-right: 2px; width:28px;">اختصارات شات درر العرب للجوال <button class="btn fr btn-success fa fa-refresh" style="margin:0px;margin-top:-2px;"></button></a>
 <ul class="nav  nav-tabs" style="margin-bottom:0px;background-color:white;">
 </ul>
 <h6 class="hid">
-شات تعب روحي الكتابي
+شات درر العرب الكتابي
 </h6>
-<a class="hid">اختصارات الشات الكتابي عبارة عن رموز تتيح لك الكتابة بالأختصار للدردشة الكتابية في شات تعب روحي و دردشة تعب روحي للجوال</a><form name="jump">
+<a class="hid">اختصارات الشات الكتابي عبارة عن رموز تتيح لك الكتابة بالأختصار للدردشة الكتابية في شات درر العرب و دردشة درر العرب للجوال</a><form name="jump">
 <table border="1" width="100%">
 <p align="center">
 <select name="menu" style="color: #6e6e6e;">
-<option value="https://wjj3.net/">دخول شات تعب روحي للجوال</option>
+<option value="https://www.iraqia-chat.com/">دخول شات درر العرب للجوال</option>
 <option value="rules.html">قوانين الشات</option>
-<option value="https://wlhchat.com/">جفى الخليج</option>
+<option value="https://www.chat-iraq.com/broq/">بروق</option>
 <option value="contact.html">اتصل بنا</option>
 <option value="Shortcut.html">اختصارات الشات</option>
 <option value="sub.html">اشتراكات السوابر</option>
@@ -709,7 +709,7 @@ div#tlogins.light {
 <input type="button" onclick="location=document.jump.menu.options[document.jump.menu.selectedIndex].value;" value="اذهب" maxlength="10">
 <p align="center">
 <marquee></marquee>
-<font color="#19707e">أختصارات شات تعب روحي للجوال</font><br>
+<font color="#19707e">أختصارات شات درر العرب للجوال</font><br>
 <br>
 &nbsp;</p>
 <table class="tablesorter" style="box-sizing: border-box; font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: 700; text-shadow: none !important; font-size: 13.8px; border-spacing: 0px; border-collapse: collapse; background-color: rgb(254, 254, 254); border: 0px; color: rgb(51, 51, 51); font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;" width="515">
@@ -1552,7 +1552,7 @@ Bi N G .. !!</td>
 <tbody></tbody>
 <div class="abo ">
 <a href="rules.html">
-<br> شروط وقوانين الأشتراك في شات تعب روحي للجوال أضغط هنا </a></b></span></td>
+<br> شروط وقوانين الأشتراك في شات درر العرب للجوال أضغط هنا </a></b></span></td>
 <p>
 <tbody>
 <tr>
@@ -1562,18 +1562,18 @@ Bi N G .. !!</td>
 <div class="abo ">
 &nbsp;</div>
 <p align="left">
-<img border="0" src="img/logo.gif" width="403" height="229"><a href="https://wjj3.net/"><span>
+<img border="0" src="img/logo.png" width="403" height="229"><a href="https://www.iraqia-chat.com/"><span>
 </span>
 </p>
 <div class="auto-style1 ">
 <p>
-<br>جميع الحقوق محفوظة لـ شات تعب روحي للجوال 2023 - 2024</div>
+<br>جميع الحقوق محفوظة لـ شات درر العرب للجوال 2023 - 2024</div>
 <script>
-            $(`<img src="img/logoo.gif" class="fr" style="width:100%;margin-top: 0px;margin-bottom: 00px;" ><center>
+            $(`<img src="img/logoo.jpg" class="fr" style="width:100%;margin-top: 0px;margin-bottom: 00px;" ><center>
 <div id="wjj3">
 <a id="wjj3" href="sub.html"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">اشتراكات</a>
 <a id="wjj3" href="rules.html"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">القوانين</a>
-<a id="wjj3" href="https://wlhchat.com"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">شات جفى الخليج</a>
+<a id="wjj3" href="https://www.chat-iraq.com/broq/"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">شات بروق</a>
 <a id="wjj3" href="contact.html"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">اتصل بنا</a>`).insertBefore('.nav-tabs');
            
 			
