--- a/aden.html
+++ b/aden.html
@@ -800,7 +800,7 @@ h2 { text-align: center; background: #605b5b; color: #605b5b; font: 16px 'Segoe 
 <a href="qatar.html">شات بنات قطر</a>
 <a href="aden.html">شات بنات عدن</a>
 <a href="yemen.html">شات بنات اليمن</a>
-<a href="jibouti.html">شات بنات جيبوتي</a>
+<a href="wateen.html">شات وتين</a>
 </nav>
 <nav>
 <a href="egypt.html">شات بنات مصر</a>
