--- a/syria.html
+++ b/syria.html
@@ -717,7 +717,7 @@ div#tlogins.light {
 <div id="wjj3">
 <a id="wjj3" href="sub.html"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">اشتراكات</a>
 <a id="wjj3" href="rules.html"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">القوانين</a>
-<a id="wjj3" href="https://www.chat-iraq.com/broq/style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">شات بروق</a>
+<a id="wjj3" href="https://www.chat-iraq.com/broq/"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">شات بروق</a>
 <a id="wjj3" href="contact.html"style="width: 90px;padding: 1px;height: 22px;" class="btn minix btn-primary">اتصل بنا</a>`).insertBefore('.nav-tabs');
            
 			
