--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
   </head>
   <body>
+<div align="center">
+
 <div class="codrops-top"><marquee direction="right" scrolldelay="150">اهلا وسهلا بكم في شات درر العرب قريباً افتتاح موقع دردشة درر العرب</marquee></div> 
 <br>
 <form>
@@ -40,4 +42,5 @@
   
   </body>
 </html>		
+
 
